# tinyrenderer_notes

./: .gitignore  README.md
00base/: main.cpp
01line/: Lesson1.md  main.cpp
02triangles/: main.cpp
03zbuffer/: Lesson3.md  geometry.h  main.cpp  model.h
04Prospective/: geometry.cpp  geometry.h  main.cpp  tgaimage.cpp
05movingCamera/: CMakeLists.txt  geometry.h  main.cpp
06gauraudShading/: geometry.cpp  geometry.h  main.cpp  model.cpp  model.h  rasterizer.cpp  rasterizer.h  tgaimage.cpp  tgaimage.h
